// npx prisma generate
// npx prisma migrate dev --name init
// npx prisma studio

datasource db {
  provider = "sqlite"
}

generator client {
  provider = "prisma-client-js"
}

// User table
model User {
  id            String         @id @default(uuid())
  name          String
  email         String         @unique
  password      String
  sessions      Session[]
  typings       Typing[]
  createdAt     DateTime       @default(now())
  revisions     Revision[]
  tasks         Task[]
  defaultTasks  DefaultTask[]
  notes         Note[]
  noteTemplates NoteTemplate[]
}

// Session table
model Session {
  id        String   @id @default(uuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([userId])
}

// Typing table (records per user)
model Typing {
  id         String   @id @default(uuid())
  userId     String
  exerciseId String
  durationId String
  accuracy   Float
  gross      Int
  net        Int
  createdAt  DateTime @default(now())

  user     User     @relation(fields: [userId], references: [id])
  exercise Exercise @relation(fields: [exerciseId], references: [id])
  duration Duration @relation(fields: [durationId], references: [id])

  @@index([userId])
  @@index([exerciseId])
}

// Exercise table
model Exercise {
  id         String @id @default(uuid())
  title      String
  exerciseNo String @unique
  typeId     String
  lessonId   String

  type   ExerciseType @relation(fields: [typeId], references: [id])
  lesson Lesson       @relation(fields: [lessonId], references: [id])

  typings Typing[]
}

// ExerciseType table
model ExerciseType {
  id   String @id @default(uuid())
  type String @unique

  exercises Exercise[]
}

// Lesson table
model Lesson {
  id     String @id @default(uuid())
  lesson String @unique
  order  Int?

  exercises Exercise[]
}

// Duration table
model Duration {
  id       String @id @default(uuid())
  duration String @unique

  typings Typing[]
}

// Migration for R-III

model Skill {
  id         String     @id @default(uuid())
  title      String
  order      Int?
  categories Category[]
}

model Category {
  id       String  @id @default(uuid())
  title    String
  order    Int?
  parentId String?
  skillId  String? // Optional per your request

  // Relations
  parent   Category?  @relation("CategoryToCategory", fields: [parentId], references: [id])
  children Category[] @relation("CategoryToCategory")

  // Note: Made Skill optional here too to match skillId
  skill Skill? @relation(fields: [skillId], references: [id])

  topics Topic[]

  @@index([skillId])
  @@index([parentId])
}

model Topic {
  id         String @id @default(uuid())
  title      String
  categoryId String
  order      Int?

  category  Category   @relation(fields: [categoryId], references: [id])
  revisions Revision[]

  @@index([categoryId])
}

model Revision {
  id        String    @id @default(uuid())
  topicId   String
  userId    String
  scheduled DateTime
  practiced DateTime?

  revision1     Boolean   @default(false)
  revision1date DateTime?
  revision2     Boolean   @default(false)
  revision2date DateTime?
  revision3     Boolean   @default(false)
  revision3date DateTime?
  revision4     Boolean   @default(false)
  revision4date DateTime?
  revision5     Boolean   @default(false)
  revision5date DateTime?

  topic Topic @relation(fields: [topicId], references: [id])
  user  User  @relation(fields: [userId], references: [id])

  @@index([topicId])
  @@index([userId])
}

model Task {
  // Changed from Int to String with uuid()
  id String @id @default(uuid())

  // Relation to User (matching your String/UUID userId)
  user   User   @relation(fields: [userId], references: [id])
  userId String

  date    DateTime
  title   String
  remarks String?
  status  Boolean  @default(false)
  order   Int

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model DefaultTask {
  // Changed from Int to String with uuid()
  id String @id @default(uuid())

  // Relation to User
  user   User   @relation(fields: [userId], references: [id])
  userId String

  title   String
  remarks String?
  order   Int

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// ============================================================
// ENUMS
// ============================================================

enum NoteVisibility {
  PERSONAL
  GLOBAL
}

enum NoteTargetType {
  TOPIC
  SKILL
  CATEGORY
  TASK
}

// ============================================================
// NOTES
// ============================================================

model Note {
  id      String  @id @default(uuid())
  title   String  @default("Untitled")
  content String? // BlockNote JSON stored as string

  // PERSONAL = private to user
  // GLOBAL   = shareable, importable by anyone via shareCode
  visibility NoteVisibility @default(PERSONAL)

  // Linking — both null means the note is standalone
  // A note can be PERSONAL+linked, PERSONAL+unlinked,
  // GLOBAL+linked, or GLOBAL+unlinked independently
  targetId   String?
  targetType NoteTargetType?

  // Only set when visibility = GLOBAL
  // Short unique code e.g. "NOTE-A3X9K" used to import this note
  shareCode String? @unique

  // null when visibility = GLOBAL (global notes have no owner)
  userId String?
  user   User?   @relation(fields: [userId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([visibility])
  @@index([shareCode])
  @@index([targetId, targetType, userId])
}

// ============================================================
// NOTE TEMPLATES
// ============================================================

model NoteTemplate {
  id      String @id @default(uuid())
  name    String // Display name e.g. "Daily Reflection"
  pattern String // Slash menu trigger e.g. "daily", "bug"
  content String // BlockNote JSON — pre-built starter content

  // null = global template available to all users (ships with app)
  // set  = private template created by that user only
  // A user's /daily overrides the global /daily if both exist
  userId String?
  user   User?   @relation(fields: [userId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Same pattern can exist as global (null) AND per-user
  // but a user cannot have two templates with the same pattern
  @@unique([pattern, userId])
  @@index([userId])
}
